[gd_scene load_steps=11 format=2]

[ext_resource path="res://windows/ingress/ingress.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://programs/Breakers/breaker2.tres" type="Resource" id=4]
[ext_resource path="res://shaders/program_shader.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 192
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Attacker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -150, 75 ), Vector2( 149.6, 75.088 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attacker/AttackerSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attacker/AttackerName:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Defender:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 578.5, 75 ), Vector2( 442.088, 75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Defender/DefenderSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Defender/DefenderName:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "player_damaged"
tracks/0/type = "value"
tracks/0/path = NodePath("DangerOverlay:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.137255 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Danger:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.137255 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Ingress" type="ColorRect" groups=[
"ingress",
]]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
defenders = [ ExtResource( 4 ) ]

[node name="DefenderAttackTimer" type="Timer" parent="."]

[node name="AttackerAttackTimer" type="Timer" parent="."]

[node name="Defender" type="Node2D" parent="."]
position = Vector2( 578.5, 75 )

[node name="DefenderSprite_old" type="Sprite" parent="Defender"]
visible = false
modulate = Color( 0.345098, 0.819608, 0.929412, 1 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="DefenderName" type="RichTextLabel" parent="Defender"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -107.963
margin_top = 77.9148
margin_right = 118.037
margin_bottom = 117.915
rect_pivot_offset = Vector2( 110.783, -1.24854 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][shake]Borus"
text = "Borus"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenderSprite" parent="Defender" instance=ExtResource( 5 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -75.0576
margin_top = -76.0541
margin_right = 74.9424
margin_bottom = 73.9459
rect_pivot_offset = Vector2( 75.1226, 75.2043 )

[node name="Attacker" type="Node2D" parent="."]
position = Vector2( -150, 75 )

[node name="AttackerSprite_old" type="Sprite" parent="Attacker"]
visible = false
modulate = Color( 0.670588, 0.160784, 0.160784, 1 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="AttackerSprite" parent="Attacker" instance=ExtResource( 5 )]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -74.1435
margin_top = -76.1436
margin_right = 75.8565
margin_bottom = 73.8564
rect_pivot_offset = Vector2( 73.0282, 75.2938 )

[node name="AttackerName" type="RichTextLabel" parent="Attacker"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -110.0
margin_top = 67.224
margin_right = 116.0
margin_bottom = 107.224
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][shake]Borus"
text = "Borus"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DangerOverlay" type="ColorRect" parent="."]
modulate = Color( 0.619608, 0.14902, 0.14902, 0.180392 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 288.501
margin_top = 67.4593
margin_right = 328.501
margin_bottom = 107.459
rect_scale = Vector2( 15.0933, -4.57894 )
rect_pivot_offset = Vector2( 20.4512, 20.6682 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Danger" type="RichTextLabel" parent="."]
modulate = Color( 0.619608, 0.14902, 0.14902, 1 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 245.149
margin_top = -20.6682
margin_right = 343.149
margin_bottom = 173.332
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][shake]![/shake]"
text = "!"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackerAnimator" type="AnimationPlayer" parent="."]
anims/load_program = SubResource( 3 )

[node name="DefenderAnimator" type="AnimationPlayer" parent="."]
anims/load_program = SubResource( 4 )

[node name="Damaged" type="AnimationPlayer" parent="."]
anims/player_damaged = SubResource( 5 )

[connection signal="timeout" from="DefenderAttackTimer" to="." method="_on_DefenderAttackTimer_timeout"]
[connection signal="timeout" from="AttackerAttackTimer" to="." method="_on_AttackerAttackTimer_timeout"]
